Implement first 2 of 5 sections from top-down

--- a/index.html
+++ b/index.html
@@ -15,13 +15,37 @@
             <div class="second-item">header link two</div>
             <div class="second-item">header link three</div>
         </div>
-        <div class="third-one">3rd item</div>
-        <div class="fourth-one">4th item</div>
+        <div class="third-one">
+            <p style="font-size: 48px; font-weight: 900; color: #F9FAF8;">This website is awesome</p>
+            <p class="second-para">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</p>
+            <button class="button-one">Sign up</button>
+        </div>
+        <div class="fourth-one">
+            <img src="images/dummy.png" alt="Placeholder for an image" width="450" height="235">
+        </div>
     </div>
 
 
     <div class="two">
-        <div class="first-two">Some random information</div>
+        <div class="first-two">Some random information.</div>
+        <div class="second-two">
+            <div class="img-container">
+                <img src="images/ahsan-monjil.jpg" alt="ahsan-monjil image" width="200" height="200">
+                <p class="img-subtext">Ahsan Monjil</p>
+            </div>
+            <div class="img-container">
+                <img src="images/curzon-hall.jpeg" alt="curzon-hall image" image width="200" height="200">
+                <p class="img-subtext">Curzon Hall</p>
+            </div>
+            <div class="img-container">
+                <img src="images/lalbagh-fort.jpg" alt="lalbagh-fort image" width="200" height="200">
+                <p class="img-subtext">Lalbagh Fort</p>
+            </div>
+            <div>
+                <img src="images/national-memorial.jpg" alt="national-memorial image" width="200" height="200">
+                <p class="img-subtext">National Memorial</p>
+            </div>
+        </div>
     </div>
 
 
