Implement necessary changes to all sections

--- a/index.html
+++ b/index.html
@@ -9,40 +9,43 @@
 </head>
 <body>
     <div class="one">
-        <div class="first-one">Header Logo</div>
+        <div class="first-one">
+            <img src="images/dhaka-logo.jpg" alt="Reload for Logo" width="100" height="70">
+        </div>
         <div class="second-one">
             <div class="second-item">header link one</div>
             <div class="second-item">header link two</div>
             <div class="second-item">header link three</div>
         </div>
         <div class="third-one">
-            <p style="font-size: 48px; font-weight: 900; color: #F9FAF8;">This website is awesome</p>
-            <p class="second-para">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</p>
+            <p style="font-size: 48px; font-weight: 900; color: #F9FAF8;">Monumental places in Dhaka</p>
+            <p class="second-para">This website has some information about various monumental places 
+                to visit for upcoming tourists willing to visit Dhaka in the near future.</p>
             <button class="button-one">Sign up</button>
         </div>
         <div class="fourth-one">
-            <img src="images/dummy.png" alt="Placeholder for an image" width="450" height="235">
+            <img src="images/dhaka.jpg" alt="Beauty of Dhaka in a nutshell" width="450" height="250">
         </div>
     </div>
 
 
     <div class="two">
-        <div class="first-two">Some random information.</div>
+        <div class="first-two">Some notable places in Dhaka.</div>
         <div class="second-two">
             <div class="img-container">
-                <img src="images/ahsan-monjil.jpg" alt="ahsan-monjil image" width="200" height="200">
+                <img src="images/ahsan-monjil.jpg" class="images" alt="ahsan-monjil image" width="200" height="200">
                 <p class="img-subtext">Ahsan Monjil</p>
             </div>
             <div class="img-container">
-                <img src="images/curzon-hall.jpeg" alt="curzon-hall image" image width="200" height="200">
+                <img src="images/curzon-hall.jpeg" class="images" alt="curzon-hall image" image width="200" height="200">
                 <p class="img-subtext">Curzon Hall</p>
             </div>
             <div class="img-container">
-                <img src="images/lalbagh-fort.jpg" alt="lalbagh-fort image" width="200" height="200">
+                <img src="images/lalbagh-fort.jpg" class="images" alt="lalbagh-fort image" width="200" height="200">
                 <p class="img-subtext">Lalbagh Fort</p>
             </div>
             <div>
-                <img src="images/national-memorial.jpg" alt="national-memorial image" width="200" height="200">
+                <img src="images/national-memorial.jpg" class="images" alt="national-memorial image" width="200" height="200">
                 <p class="img-subtext">National Memorial</p>
             </div>
         </div>
@@ -50,17 +53,27 @@
 
 
     <div class="three">
-
+        <p style="margin: 0px 300px">"The vibrant culture of the tribal groups living in Dhaka reminds us that beauty and strength 
+            can arise from the most challenging of circumstances. Dhaka may be crowded and chaotic, 
+            but its people and its land have an indomitable spirit that never ceases to inspire."</p>
+            
+        <p style="margin-left: 45%; font-size: 24px; font-style: normal; font-weight: 600;">-A Random Dhakaiya(Dhaka resident)</p>
     </div>
 
 
     <div class="four">
-
+        <div class="first-four">
+            <p style="margin-bottom: -13px; font-size: 20px; font-weight: bold;">Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="second-four">
+            <button class="button-two">Sign up</button>
+        </div>
     </div>
 
 
     <footer>
-
+        Done by <strong>Tazwar Mohammed</strong>
     </footer>
 </body>
 </html>
